--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-popover-view": "^5.1.7",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
