--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
@@ -46,12 +47,12 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.6.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.8.4"
   },
