--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@babel/runtime": "^7.20.0",
     "@jest/globals": "^29.6.1",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.0.24",
@@ -49,6 +51,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.1",
+    "@types/testing-library__jest-dom": "^5.14.7",
     "babel-jest": "^29.6.1",
     "eslint": "^8.19.0",
     "jest": "^29.6.1",
@@ -56,9 +59,7 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
