--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    "types": ["@types/styled-components-react-native", "jest"]
+    "types": [
+      "@types/styled-components-react-native",
+      "node",
+      "jest",
+      "@testing-library/jest-dom"
+    ]
   }
 }
