--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "jsdom": "^22.1.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-dropdown-select-list": "^2.0.4",
@@ -55,6 +56,7 @@
     "babel-jest": "^29.6.1",
     "eslint": "^8.19.0",
     "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "^18.2.0",
