--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@testing-library/react-native": "^12.1.2",
     "axios": "^1.3.4",
     "jsdom": "^22.1.0",
     "react": "18.2.0",
