--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "rnpm": {
+    "assets": [
+      "./app/fonts"
+    ]
+  },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.12",
@@ -22,6 +27,7 @@
     "jsdom": "^22.1.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-cli": "^2.0.1",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-onboarding-swiper": "^1.2.0",
